--- a/Docker/plusFlix/backend/templates/admin/categories-backup.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/categories-backup.html.twig
@@ -41,7 +41,7 @@
     </table>
     </div>
 
-    {% include 'admin/commonModal.html.twig' with {
+    {% include 'admin/modals/commonModal.html.twig' with {
         modal_type: 'categoryModal',
         modal_title: 'Nazwa Kategori',
     }%}
