--- a/Docker/plusFlix/backend/templates/admin/items.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/items.html.twig
@@ -118,7 +118,7 @@
 {#    </div>#}
 {#</div>#}
 
-    {% include 'admin/itemModal.html.twig' %}
+    {% include 'admin/modals/itemModal.html.twig' %}
 
 {#<div id="itemAddModal" class="modal" style="display: none">#}
 {#    <div class="modal-content">#}
