--- a/Docker/plusFlix/backend/templates/admin/ratings.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/ratings.html.twig
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    {% include 'admin/ratingsModal.html.twig'%}
+    {% include 'admin/modals/ratingsModal.html.twig'%}
 
     {% block javascript %}
         <script src="{{ asset('js/admin/admin.ratingsModal.js') }}"></script>
