--- a/Docker/plusFlix/backend/templates/admin/streamings.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/streamings.html.twig
@@ -46,7 +46,7 @@
     </div>
 </div>
 
-    {% include 'admin/commonModal.html.twig' with {
+    {% include 'admin/modals/commonModal.html.twig' with {
         modal_type: 'streamingModal',
         modal_title: 'Nazwa Platformy',
         name_field: 'platform_name',
