--- a/Docker/plusFlix/backend/templates/admin/tags.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/tags.html.twig
@@ -48,7 +48,7 @@
 </div>
 
 
-{% include 'admin/commonModal.html.twig' with {
+{% include 'admin/modals/commonModal.html.twig' with {
     modal_type: 'tagModal',
     modal_title: 'Dodaj tag',
     name_field: 'name',
