--- a/Docker/plusFlix/backend/public/css/admin/admin.base.css
+++ b/Docker/plusFlix/backend/public/css/admin/admin.base.css
@@ -32,3 +32,18 @@ body {
 .admin-nav a:hover {
     background: #cfcfcf;
 }
+
+form {
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+    height: 50%;
+}
+
+form button {
+    width: 100%;
+    max-height: 2em;
+    padding: 4px;
+    margin: 0 6px;
+    border-radius: 1em;
+}
