strona dziela, porzadki, uspójniony wyglad admina, dodanie przyciskow wszystkie i ulubione, ulepszenie filtrow, dodawanie ocen, sekcja komentarzy

--- a/Docker/plusFlix/backend/public/css/admin/admin.base.css
+++ b/Docker/plusFlix/backend/public/css/admin/admin.base.css
@@ -33,14 +33,14 @@ body {
     background: #cfcfcf;
 }
 
-form {
+#logout-form {
     display: flex;
     align-items: flex-end;
     width: 100%;
     height: 50%;
 }
 
-form button {
+#logout-form button {
     width: 100%;
     max-height: 2em;
     padding: 4px;
