--- a/Docker/plusFlix/backend/templates/admin/categories.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/categories.html.twig
@@ -29,11 +29,11 @@
                         <td>
                             <a href="#" class="editCategoryBtn"
                             data-id="{{ category.cat_ID }}"
-                            data-name="{{ category.genre }}">EDYTUJ</a>
+                            data-name="{{ category.genre }}">Edytuj</a>
                             <span class="action-separator">|</span>
                             <a href="#"
                                 class="deleteCategoryLink"
-                                data-id="{{ category.cat_ID }}">USUŃ</a>
+                                data-id="{{ category.cat_ID }}">Usuń</a>
                         </td>
                     </tr>
                 {% endfor %}
