Zmiana czcionki, dodanie base pliku css z czcionka

--- a/Docker/plusFlix/backend/templates/public/home/index.html.twig
+++ b/Docker/plusFlix/backend/templates/public/home/index.html.twig
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="/css/home.css">
+<link rel="stylesheet" href="css/font_base.css">
+
 {% set STREAMING_DATA_BY_ID = {
     1: {
         name: "Netflix",
