--- a/Docker/plusFlix/backend/public/css/navbar.css
+++ b/Docker/plusFlix/backend/public/css/navbar.css
@@ -16,7 +16,7 @@
     justify-content: space-between;
 
     color: #fff;
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
 
     position: sticky;
     top: 0;
