--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -5,6 +5,7 @@
     <title>{% block title %}PlusFlix{% endblock %}</title>
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/search_results.css">
+    <link rel="stylesheet" href="css/font_base.css">
 </head>
 
 <body>
