--- a/Docker/plusFlix/backend/templates/public/home/index.html.twig
+++ b/Docker/plusFlix/backend/templates/public/home/index.html.twig
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/css/home.css">
 <link rel="stylesheet" href="css/font_base.css">
 
