--- a/Docker/plusFlix/backend/templates/search/base.html.twig
+++ b/Docker/plusFlix/backend/templates/search/base.html.twig
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/search_results.css">
     <link rel="stylesheet" href="css/font_base.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
