--- a/Docker/plusFlix/backend/templates/public/item.html.twig
+++ b/Docker/plusFlix/backend/templates/public/item.html.twig
@@ -14,7 +14,12 @@
     <div id="main_content">
         <div id="leftColumn">
             <div class="bigPoster">
-                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg">
+                <img
+                    src="{{ item.coverUrl ?: 'https://tvod.iat.pl/view/img/notfound_portrait.jpg' }}"
+                    class="poster"
+                    loading="lazy"
+                    alt="{{ item.name }}"
+                >
             </div>
 
             <div id="itemTags">
@@ -48,7 +53,7 @@
             <h2>Opis</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget lorem venenatis, accumsan odio ac, fermentum ligula. Phasellus pulvinar aliquet nisi, eget ultrices nunc laoreet id. Nullam finibus mi ultricies, euismod ligula gravida, tincidunt ante. Donec tempus metus et eros vehicula, sit amet dictum purus dictum. Duis porta bibendum velit consectetur elementum. Donec placerat turpis feugiat, faucibus odio tincidunt, aliquet enim. Proin nec diam dignissim, eleifend lacus non, molestie eros. Etiam ac massa tristique, semper elit eu, aliquet erat. Maecenas auctor felis justo, vitae dictum nibh suscipit ut. In id lacinia justo. Donec in molestie lectus. Vivamus eu lacus id eros cursus accumsan. Nullam nibh massa, aliquet id aliquet non, posuere sed enim. Sed augue justo, blandit a sem a, tempus sollicitudin mi. Phasellus non ante vel justo malesuada tempor id ultricies neque. </p><br>
 
-            <button id="add-to-favorites" class="fav-btn" data-id="{{ item.id }}">⊕ Dodaj do ulubionych</button>
+            <button id="add-to-favorites" class="fav-btn" data-id="{{ item.id }}">⊕ Dodaj do ulubionych </button>
 
             <h2>Gdzie obejrzeć</h2>
 
@@ -104,7 +109,12 @@
 
                         <a href="{{ path('item_detail', {'id': similar.id}) }}">
                             <div class="poster-wrapper">
-                                <img src="https://tvod.iat.pl/view/img/notfound_portrait.jpg" class="poster">
+                                <img
+                                    src="{{ similar.coverUrl ?: 'https://tvod.iat.pl/view/img/notfound_portrait.jpg' }}"
+                                    class="poster"
+                                    loading="lazy"
+                                    alt="{{ similar.name }}"
+                                >
 
 
                                 <div class="streaming-icons">
