--- a/Docker/plusFlix/backend/templates/public/search/favorites.html.twig
+++ b/Docker/plusFlix/backend/templates/public/search/favorites.html.twig
@@ -1,6 +1,10 @@
-{% extends 'search/base.html.twig' %}
+{% extends 'public/search/base.html.twig' %}
 
 {% block title %}Wyniki wyszukiwania{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="/css/public/search_results.css">
+{% endblock %}
 
 {% block body %}
 
