--- a/Docker/plusFlix/backend/public/css/public/navbar.css
+++ b/Docker/plusFlix/backend/public/css/public/navbar.css
@@ -80,7 +80,7 @@
 }
 
 .nav-right a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
     font-size: 15px;
 }
@@ -89,36 +89,18 @@
     text-decoration: underline;
 }
 
-.theme-toggle {
-    width: 60px;
-    height: 30px;
-    background: black;
-    border-radius: 30px;
-    cursor: pointer;
-    color: #fff;
-    position: relative;
-    transition: background-color 0.3s;
+.nav-lists-btns {
+    background-color: #fdd500;
+    border: 2px solid #8e8e9c;
+    padding: 6px 12px;
+    border-radius: 1em;
+    transition: 0.2s;
 }
 
-.theme-toggle::before {
-    content: "";
-    width: 22px;
-    height: 22px;
-    background-color: white;
-    border-radius: 50%;
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    transition: transform 0.3s;
+.nav-lists-btns:hover {
+    background-color: #c3a600;
 }
 
-.theme-toggle.dark {
-    background-color: #d5d5d5;
-}
-
-.theme-toggle.dark::before {
-    transform: translateX(30px);
-}
 
 @media (max-width: 800px) {
 
