--- a/Docker/plusFlix/backend/templates/public/home/index.html.twig
+++ b/Docker/plusFlix/backend/templates/public/home/index.html.twig
@@ -1,6 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/css/home.css">
-<link rel="stylesheet" href="css/font_base.css">
+<link rel="stylesheet" href="/css/public/home.css">
+<link rel="stylesheet" href="/css/public/font_base.css">
+<link rel="stylesheet" href="/css/public/darkmode_toggle.css">
 
 {% set STREAMING_DATA_BY_ID = {
     1: {
@@ -38,6 +39,10 @@
 
 <div class="logo-fixed">Logo</div>
 
+<div id="toggle-wrapper">
+    <button class="theme-toggle"></button>
+</div>
+
 <h1 class="app-name">PlusFlix</h1>
 
 <div class="search-section">
@@ -57,6 +62,11 @@
         </div>
     </form>
 
+</div>
+
+<div id="lists-buttons">
+    <a class="nav-lists-btns" href="/search">Wszystkie</a>
+    <a class="nav-lists-btns" href="/favorites">Ulubione</a>
 </div>
 
 <div class="streaming-logos-section">
