--- a/Docker/plusFlix/backend/templates/admin/items.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/items.html.twig
@@ -72,133 +72,8 @@
     </div>
 </div>
 
-{#<div id="main_content">#}
-{#    <h1>#}
-{#        Filmy i seriale <a href="#" id="addCategoryBtn"> + </a>#}
-{#    </h1>#}
-{#    <input id="searchBar" type="search" placeholder="Type your desired item name">#}
-{#    <div id="items_container">#}
-{#        <div id="items_nav">#}
-{#            <p>Tytuł dzieła</p>#}
-{#            <p>Rok produkcji</p>#}
-{#            <p>Reżyser</p>#}
-{#            <p>Kategorie</p>#}
-{#            <p>Tagi</p>#}
-{#            <p>Streamingi</p>#}
-{#            <p>Akcje</p>#}
-{#        </div>#}
-
-{#        <div id="items">#}
-{#            {% for item in items %}#}
-{#                <p>{{ item.name }}</p>#}
-{#                <p>{{ item.year }}</p>#}
-{#                <p>{{ item.director }}</p>#}
-{#                <p>#}
-{#                    {% for category in item.categories %}#}
-{#                        {{ category.genre }},#}
-{#                    {% endfor %}#}
-{#                </p>#}
-{#                <p>#}
-{#                    {% for tag in item.tags %}#}
-{#                        {{ tag.tagName }},#}
-{#                    {% endfor %}#}
-{#                </p>#}
-{#                <p>#}
-{#                    {% for streaming in item.streamings %}#}
-{#                        {{ streaming.platformName }},#}
-{#                    {% endfor %}#}
-{#                </p>#}
-{#                <div style="display: flex; align-self: center">#}
-{#                    <a href="#" class="editItemBtn" data-id="{{ item.id }}">modyfikuj </a>#}
-{#                    |#}
-{#                    <a href="#" class="deleteItemBtn" data-id="{{ item.id }}"> usuń</a>#}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        </div>#}
-{#    </div>#}
-{#</div>#}
 
     {% include 'admin/modals/itemModal.html.twig' %}
-
-{#<div id="itemAddModal" class="modal" style="display: none">#}
-{#    <div class="modal-content">#}
-{#        <span class="close">&times;</span>#}
-
-{#        <h2 id="modalTitle"></h2>#}
-
-{#        <form id="itemForm" method="POST" action="{{ path('admin_item_add') }}">#}
-{#            <div class="form_input_container">#}
-{#                <label>Tytuł dzieła</label><br>#}
-{#                <input id="nameInput" type="text" name="name"  placeholder="tytuł dzieła" required><br><br>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Rok produkcji</label><br>#}
-{#                <input id="yearInput" type="number" name="year"  placeholder="rok produkcji" required><br><br>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Reżyser</label><br>#}
-{#                <input id="directorInput" type="text" name="director"  placeholder="reżyser" required><br><br>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Actors</label><br>#}
-{#                <input id="actorsInput" type="text" name="actors" required>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Type</label><br>#}
-{#                <select id="typeInput" name="type" required>#}
-{#                    <option value=1>Movie</option>#}
-{#                    <option value=2>Series</option>#}
-{#                </select>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Duration (minutes)</label><br>#}
-{#                <input id="durationInput" type="number" name="duration" required>#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Season (if Series)</label><br>#}
-{#                <input id="seasonInput" type="number" name="season">#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Tagi</label><br>#}
-{#                <div id="tagsPills" class="pills-container" multiple>#}
-{#                    {% for tag in tags %}#}
-{#                        <div class="pill" data-value="{{ tag.id }}">{{ tag.tagName }}</div>#}
-{#                    {% endfor %}#}
-{#                </div>#}
-{#                <input type="hidden" id="tagsInput" name="tags">#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Kategorie</label><br>#}
-{#                <div id="categoriesPills" class="pills-container" multiple>#}
-{#                    {% for category in categories %}#}
-{#                        <div class="pill" data-value="{{ category.id }}">{{ category.genre }}</div>#}
-{#                    {% endfor %}#}
-{#                </div>#}
-{#                <input type="hidden" id="categoriesInput" name="categories">#}
-{#            </div>#}
-
-{#            <div class="form_input_container">#}
-{#                <label>Streamingi</label><br>#}
-{#                <div id="streamingsPills" class="pills-container" multiple>#}
-{#                    {% for streaming in streamings %}#}
-{#                        <div class="pill" data-value="{{ streaming.id }}">{{ streaming.platformName }}</div>#}
-{#                    {% endfor %}#}
-{#                </div>#}
-{#                <input type="hidden" id="streamingsInput" name="streamings">#}
-{#            </div>#}
-
-{#            <button type="submit" id="modalSubmitBtn">Zapisz</button>#}
-{#        </form>#}
-{#    </div>#}
-{#</div>#}
 
 
     {% block script %}
@@ -338,13 +213,13 @@
             const query = searchBar.value;
 
             if(query !== '') {
-                let searchUrl = '/admin/list';
+                let searchUrl = '/admin/items';
                 searchUrl = searchUrl + '?name=' + query;
 
                 window.location.href = searchUrl;
             }
             else
-                window.location.href = '/admin/list';
+                window.location.href = '/admin/items';
         }
     };
 </script>
