field to add title covers

--- a/Docker/plusFlix/backend/templates/admin/modals/itemModal.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/modals/itemModal.html.twig
@@ -46,6 +46,11 @@
                 </div>
 
                 <div class="form_input_container">
+                    <label>Cover URL</label>
+                    <input id="imgInput" type="text" name="cover_url">
+                </div>
+
+                <div class="form_input_container">
                     <label>Tagi</label>
                     <div id="tagsPills" class="pills-container" multiple>
                         {% for tag in tags %}
