--- a/Docker/plusFlix/backend/templates/admin/items.html.twig
+++ b/Docker/plusFlix/backend/templates/admin/items.html.twig
@@ -11,7 +11,21 @@
         <h1>Seriale i filmy&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" id="addBtn">+</a></h1>
     </div>
 
-    <input class="input-research" type="text" placeholder="Szukaj">
+    <form method="get" action="{{ path('admin_items') }}">
+        <div class="search-container">
+            <input
+                class="input-research"
+                type="text"
+                name="name"
+                value="{{ app.request.query.get('name') }}"
+                placeholder="Szukaj"
+            >
+
+            <button class="search-btn" type="submit">
+                <img src="https://cdn-icons-png.flaticon.com/256/2866/2866321.png" alt="search">
+            </button>
+        </div>
+    </form>
 
     <div id="table-wraper">
         <table class="admin-table" style="max-width: none">
