--- a/Docker/plusFlix/backend/public/css/public/public_item.css
+++ b/Docker/plusFlix/backend/public/css/public/public_item.css
@@ -1,3 +1,8 @@
+body {
+    background-color:   var(--bg);
+    color:              var(--text);
+}
+
 #main_content {
     display: grid;
     grid-template-columns: 0.5fr 2fr 1fr;
@@ -9,7 +14,7 @@
 }
 
 #rightColumn {
-    background: rgb(220, 220, 220);
+    background: var(--accent-color);
     border-radius: 1em;
     max-height: 820px;
 }
@@ -29,7 +34,7 @@
 .tag {
     margin: 0.2em 2px;
     padding: 0.3em 0.8em;
-    background: rgb(220, 220, 220);
+    background: var(--accent-color);
     border-radius: 1em;
 }
 
@@ -47,7 +52,7 @@
     height: 100%;
     padding: 0.2em 1em;
     box-sizing: border-box;
-    background: rgb(255, 255, 255);
+    background: var(--sec-accent-color);
     border-radius: 1em;
 }
 
@@ -160,11 +165,11 @@
 }
 
 .result-card {
-    background: #fff;
+    background: var(--sec-accent-color);
     border-radius: 0.5em;
     padding-bottom: 0.5rem;
     color: inherit;
-    width: 170px;
+    width: 160px;
     height: 255px;
 }
 
@@ -176,7 +181,7 @@
 .poster-wrapper {
     position: relative;
     width: 100%;
-    height: 80%;
+    height: 75%;
 }
 
 .poster-wrapper .logo-circle, .poster-wrapper .logo-circle img{
@@ -205,7 +210,7 @@
 }
 
 .info {
-    height: 20%;
+    height: 25%;
     padding: 0.3em 0.5em;
     text-align: center;
 }
@@ -216,7 +221,7 @@
 
 .meta {
     font-size: 0.7rem;
-    color: #666;
+    color: var(--sec-text);
 }
 
 #add-to-favorites {
@@ -264,7 +269,7 @@
 }
 
 .rating {
-    background: rgb(220, 220, 220);
+    background: var(--accent-color);
     font-size: 16px;
     padding: 0.8em 1em;
     border: none;
@@ -277,6 +282,10 @@
 
 
 @media (max-width: 800px) {
+    body {
+        background-color: var(--bg);
+    }
+
     #main_content {
         display: grid;
         grid-template-columns: 0.8fr 1fr;
@@ -332,7 +341,7 @@
     .tag {
         margin: 0.2em 2px;
         padding: 0.3em 0.8em;
-        background: rgb(220, 220, 220);
+        background: var(--accent-color);
         border-radius: 1em;
     }
 
@@ -350,7 +359,7 @@
         height: 100%;
         padding: 0.2em 1em;
         box-sizing: border-box;
-        background: rgb(255, 255, 255);
+        background: var(--sec-accent-color);
         border-radius: 1em;
     }
 
@@ -449,18 +458,17 @@
     }
 
     .result-card {
-        background: #fff;
         border-radius: 0.5em;
         padding-bottom: 0.5rem;
         color: inherit;
-        width: 170px;
+        width: 160px;
         height: 255px;
     }
 
     .poster-wrapper {
         position: relative;
         width: 100%;
-        height: 80%;
+        height: 75%;
     }
 
     .poster-wrapper .logo-circle, .poster-wrapper .logo-circle img{
@@ -489,7 +497,7 @@
     }
 
     .info {
-        height: 20%;
+        height: 25%;
         padding: 0.3em 0.5em;
         text-align: center;
     }
@@ -500,7 +508,7 @@
 
     .meta {
         font-size: 0.7rem;
-        color: #666;
+        color: var(--sec-text);
     }
 
     #add-to-favorites {
@@ -541,7 +549,7 @@
     }
 
     .rating {
-        background: rgb(220, 220, 220);
+        background: var(--accent-color);
         font-size: 16px;
         padding: 0.8em 1em;
         border: none;
