--- a/Docker/plusFlix/backend/public/css/public/search_results.css
+++ b/Docker/plusFlix/backend/public/css/public/search_results.css
@@ -1,3 +1,8 @@
+body {
+    background-color: var(--bg);
+    color: var(--text);
+}
+
 .search-results-container {
     display: flex;
     margin: 3rem;
@@ -12,8 +17,8 @@
 
 .filters-panel {
     width: 240px;
-    background: #939393;
-    border: 1px solid #ddd;
+    background: var(--accent-color);
+    border: 1px solid var(--bg);
     border-radius: 12px;
     padding: 1rem;
     height: fit-content;
@@ -62,7 +67,7 @@
 .query-container {
     display: flex;
     align-items: center;
-    gap: 1rem; 
+    gap: 1rem;
 }
 
 #filter-toggle-btn {
@@ -112,12 +117,12 @@
     border: 1px solid #ccc;
 }
 
-.dropdown-checkbox { 
-    position: relative; 
+.dropdown-checkbox {
+    position: relative;
 }
 
 .dropdown-checkbox button {
-    width: 100%; 
+    width: 100%;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
     padding: 0.6rem 1rem;
@@ -128,6 +133,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    color: black;
     background: white;
     border: 1px solid #ccc;
     padding: 8px;
@@ -154,10 +160,10 @@
 }
 
 .result-card {
-    background: #fff;
+    background: var(--sec-accent-color);
     border-radius: 8px;
     padding-bottom: 0.5rem;
-    border: 1px solid #ddd;
+    border: 1px solid var(--bg);
     overflow: hidden;
     position: relative;
     max-width: 250px;
@@ -227,7 +233,7 @@
 
 .meta {
     font-size: 0.9rem;
-    color: #666;
+    color: var(--sec-text);
 }
 
 @media (max-width: 800px) {
@@ -332,7 +338,7 @@
     .info {
         padding: 0.25rem;
     }
-    
+
     .results-main h2 {
         font-size: 1rem;
     }
